--- a/htmltutorial.html
+++ b/htmltutorial.html
@@ -165,7 +165,7 @@ and open the template in the editor.
             blockquote,.callout{
                 box-shadow: 0 0 6px rgba(0,0,0,0.5);
                 border-left: .5em solid #fff;
-                margin: 1.5em 0 1.5em -1.5em;
+                /*margin: 1.5em 0 1.5em -1.5em;*/
                 padding: .75em .5em .75em 1em;
                 background: #fff;
             }
